# autoEQ

./: .chunkhound.json  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  BUILD.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.x86_64-unknown-linux-gnu  Justfile  PROMPTS.txt  README.md  WARP.md  build-cross.sh  cert.pem  key.pem  package-lock.json  package.json  q.txt  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
src/: cli.rs  (+13 more)
src-audio/: .gitignore  Cargo.toml  plots.ipynb  prompt.md  requirements.txt  test.md
src-audio/examples/: audio_engine_demo.rs  config_watcher_demo.rs  plugin_chain_example.yaml  test_config.yaml  test_upmixer.yaml
src-audio/scripts/: plots.ipynb  run_regression_tests.sh
src-audio/src/: analysis.rs  audio.rs  audio_streaming.rs  camilla.rs  devices.rs  filters.rs  lib.rs  loudness_compensation.rs  loudness_monitor.rs  manager.rs  replaygain.rs  signal_analysis.rs  signal_recorder.rs  signals.rs  spectrum_analyzer.rs
src-audio/tests/: README.md  e2e_audio.rs  e2e_loopback.rs  regression_loopback.rs  run_regression_tests.sh  test_analyzer_plugins.rs  test_dynamics_plugins.rs  test_eq_plugin.rs  test_loudness_compensation.rs  test_plugins.rs  test_resampler_plugin.rs  test_upmixer_integration.rs
src-autoeq/: Cargo.toml  README.md
src-autoeq/bench/: autoeq_benchmark_speaker.rs
src-autoeq/examples/: cea2034_score.rs  headphone_loss_demo.rs  headphone_loss_validation.rs
src-autoeq/src/: cli.rs  constants.rs  constraints.rs  init_sobol.rs  initial_guess.rs  lib.rs  loss.rs  optim.rs  optim_de.rs  optim_mh.rs  optim_nlopt.rs  param_utils.rs  plot.rs  read.rs  signal.rs  workflow.rs  x2peq.rs
src-autoeq/tests/: cli_de_parameters.rs  peq_model_bounds.rs  test_free_filters.rs  test_mh_callback.rs
src-cea2034/: Cargo.toml  README.md
src-cea2034/src/: lib.rs
src-de/: .#README.md  Cargo.toml  README.md  REFERENCES.md
src-de/bench/: benchmark_convergence.rs
src-de/examples/: optde_adaptive_demo.rs  optde_basic.rs  optde_linear_constraints.rs  optde_nonlinear_constraints.rs  optde_parallel.rs
src-de/src/: adaptive.rs  apply_integrality.rs  apply_wls.rs  auto_de.rs  auto_de_params.rs  clip_free_inplace.rs  crossover_binomial.rs  crossover_exponential.rs  differential_evolution.rs  distinct_indices.rs  extract_functions.py  function_registry.rs  impl_helpers.rs  init_latin_hypercube.rs  init_random.rs  metadata.rs  mod.rs  mutant_adaptive.rs  mutant_best1.rs  mutant_best2.rs  mutant_current_to_best1.rs  mutant_rand1.rs  mutant_rand2.rs  mutant_rand_to_best1.rs  optimization_recorder.rs  parallel_eval.rs  recorded_de.rs  recorder.rs  run_recorded.rs  stack_linear_penalty.rs  tests.rs
src-de/tests/: complete_conversion.py  convert_all_tests.py  convert_remaining.sh  convert_tests.sh  optde_ackley.rs  optde_ackley_n2.rs  optde_ackley_n3.rs  optde_adaptive_basic.rs  optde_alpine_n1.rs  optde_alpine_n2.rs  optde_beale.rs  optde_bent_cigar.rs  optde_binh_korn_constrained.rs  optde_bird.rs  optde_bohachevsky.rs  optde_booth.rs  optde_branin.rs  optde_brown.rs  optde_bukin_n6.rs  optde_chung_reynolds.rs  optde_colville.rs  optde_cosine_mixture.rs  optde_cross_in_tray.rs  optde_dejong_family.rs  optde_dixons_price.rs  optde_drop_wave.rs  optde_easom.rs  optde_eggholder.rs  optde_epistatic_michalewicz.rs  optde_exponential.rs  optde_freudenstein_roth.rs  optde_goldstein_price.rs  optde_griewank.rs  optde_griewank2.rs  optde_happy_cat.rs  optde_hartman_3d.rs  optde_himmelblau.rs  optde_holder_table.rs  optde_keanes_bump_constrained.rs  optde_lampinen.rs  (+37 more)
src-de/tests-to-be-removed/: optde_ackley.rs  optde_ackley_n2.rs  optde_ackley_n3.rs  optde_alpine_n1.rs  optde_alpine_n2.rs  optde_beale.rs  optde_bent_cigar.rs  optde_binh_korn_constrained.rs  optde_bird.rs  optde_bohachevsky.rs  optde_booth.rs  optde_branin.rs  optde_brown.rs  optde_bukin_n6.rs  optde_chung_reynolds.rs  optde_colville.rs  optde_cosine_mixture.rs  optde_cross_in_tray.rs  optde_dejong_family.rs  optde_dixons_price.rs  optde_drop_wave.rs  optde_easom.rs  optde_eggholder.rs  optde_epistatic_michalewicz.rs  optde_exponential.rs  optde_freudenstein_roth.rs  optde_goldstein_price.rs  optde_griewank.rs  optde_griewank2.rs  optde_happy_cat.rs  optde_hartman_3d.rs  optde_himmelblau.rs  optde_holder_table.rs  optde_keanes_bump_constrained.rs  optde_lampinen.rs  optde_langermann.rs  optde_levi13.rs  optde_matyas.rs  optde_mccormick.rs  optde_michalewicz.rs  (+29 more)
src-env/: Cargo.toml
src-env/src/: constants.rs  env_utils.rs  lib.rs
src-hal/: .gitignore  Cargo.toml  README.md
src-hal/driver_bundle/: Info.plist  hal_driver_bridge.c
src-hal/examples/: audio_player_integration.rs
src-hal/scripts/: build_driver.sh  debug_driver.sh  install_driver.sh  uninstall_driver.sh
src-hal/src/: api.rs  audio_buffer.rs  bridge.rs  hal_driver.rs  lib.rs  utils.rs
src-iir/: Cargo.toml  README.md
src-iir/examples/: format_demo.rs  peq_loudness_compensation.rs  readme_example.rs
src-iir/src/: mod.rs
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  sotf.sketch  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: eq_response.rs  lib.rs  main.rs  optim.rs  tauri_audio_capture.rs  tauri_audio_devices.rs  tauri_audio_loudness.rs  tauri_audio_recording.rs  tauri_audio_replaygain.rs  tauri_audio_spectrum.rs  tauri_audio_streaming.rs  tauri_compute_eq.rs  tauri_generate_eq.rs  tauri_loudness.rs  tauri_optim.rs  tauri_plots.rs  tauri_replay_gain.rs  tauri_speakers.rs  tauri_spectrum.rs  test_mocks.rs  tests.rs
src-testfunctions/: Cargo.toml  README.md  REFERENCES.md
src-testfunctions/examples/: find_hartman_4d_min.rs  test_additional_functions.rs  test_gramacy_lee.rs  test_hartman_4d.rs  test_new_sfu_functions.rs
src-testfunctions/src/: lib.rs
src-ui-backend/: Cargo.toml
src-ui-backend/src/: audio.rs  audio_streaming.rs  camilla.rs  eq_response.rs  export.rs  lib.rs  loudness_monitor.rs  optim.rs  plot.rs  replaygain.rs  spinorama_api.rs  test_mocks.rs  tests.rs
(+467 files in other folders)
