[workspace]
members = [
    "src-autoeq",
    "src-iir",
    "src-de",
    "src-cea2034",
    "src-testfunctions",
    "src-env",
    "src-ui/src-tauri"
]
resolver = "2"

[workspace.dependencies]
# Core numerical computing
ndarray = { version = "0.16.0", features = ["blas", "serde"] }
blas-src = { version = "0.12.1" }
# Use static feature for Windows to build OpenBLAS from source
# Use system feature for Unix to link to system OpenBLAS
openblas-src = { version = "0.10", features = ["cblas", "static"] }

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Async and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
urlencoding = "2.1"

# CLI and system
clap = { version = "4.5", features = ["derive"] }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3"
num_cpus = "1.16"
thiserror = "2.0.16"
strsim = "0.11"
chrono = "0.4"

# Optimization and math
nlopt = "0.8.1"
rand = "0.9.2"
num-complex = "0.4"
metaheuristics-nature = "10.1"
rayon = "1.10"

# Plotting and visualization
plotly = { version = "0.13", features = ["static_export_default"] }
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }
build_html = "2.7.0"

# Tauri (UI framework)
tauri = { version = "2.8", features = [] }
tauri-build = { version = "2.4", features = [] }
tauri-plugin-dialog = "2.4"
tauri-plugin-opener = "2.5"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "apt update && apt -y upgrade && apt install --assume-yes pkg-config libssl-dev cmake libgdk3.0-cil-dev"
]
