[workspace]
members = [
    "src-autoeq",
    "src-iir",
    "src-de",
    "src-cea2034",
    "src-testfunctions",
    "src-env"
]
resolver = "3"

[workspace.package]
version = "0.2.441"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
description = "A CLI for automatically eq-eing your speakers or your headphones"
edition = "2024"
documentation = "https://docs.rs/autoeq"
license = "GPL-3.0-or-later"
repository = "https://github.com/pierreaubert/autoeq"

[workspace.dependencies]
# Core numerical computing
ndarray = { version = "0.16.0", features = ["rayon", "blas", "serde"] }

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
regex = "1.0"

# Async and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
urlencoding = "2.1"

# CLI and system
clap = { version = "4.5", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
num_cpus = "1.16"
thiserror = "2.0.16"
strsim = "0.11"
chrono = "0.4"

# Optimization and math
rand = "0.9.2"
num-complex = "0.4"
metaheuristics-nature = "10.1"
rayon = "1.10"
nlopt = "0.8.1"
blas-src = {version="0.14"}

# Plotting and visualization
plotly = { version = "0.13.5" }
# moved into crates since it depends of the environement
# plotly_static = { version = "0.1" }
# patched currently locally
webdriver-downloader = "0.16.0"
build_html = "2.7.0"

[patch.crates-io]
webdriver-downloader = { version = "0.16.4", git = "https://github.com/pierreaubert/webdriver-downloader" }

[profile.dev]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
