[workspace]
members = [
    "src-autoeq",
    "src-iir",
    "src-de",
    "src-cea2034",
    "src-testfunctions",
    "src-env",
    "src-audio",
    "src-tauri"
]
resolver = "3"

[workspace.package]
version = "0.2.462"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
description = "A CLI for automatically eq-eing your speakers or your headphones"
edition = "2024"
documentation = "https://docs.rs/autoeq"
license = "GPL-3.0-or-later"
repository = "https://github.com/pierreaubert/autoeq"

[workspace.dependencies]
# Core numerical computing
ndarray = { version = "0.16.1", features = ["rayon", "blas", "serde"] }

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.4"
regex = "1.12"

# Async and networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12.24", features = ["json"] }
urlencoding = "2.1"
futures-util = "0.3"

# CLI and system
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
num_cpus = "1.17"
thiserror = "2.0.17"
strsim = "0.11"
chrono = "0.4"
tempfile = "3.23"
which = "6.0"

# Optimization and math
rand = "0.9.2"
num-complex = "0.4"
metaheuristics-nature = "10.1"
rayon = "1.11"
nlopt = "0.8.1"
blas-src = {version="0.14"}
autoeq = { path = "src-autoeq" }

# Plotting and visualization
plotly = { version = "0.13.5" }
# plotly_static will be specified per-crate as needed
# patched currently locally
webdriver-downloader = "0.16.0"
build_html = "2.7.0"

# audio
cpal = "0.16.0"

# tauri
tauri = { version="2.9", features = [] }
tauri-plugin-dialog = { version="2.4" }
tauri-plugin-fs = "2"
tauri-plugin-devtools = "2.0.1"

[patch.crates-io]
webdriver-downloader = { version = "0.16.4", git = "https://github.com/pierreaubert/webdriver-downloader" }

[profile.dev]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
