[package]
name = "sotf_audio"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "sotf_audio"
path = "src/lib.rs"

[[bin]]
name = "sotf_audio"
path = "bin/sotf_audio.rs"

[[bin]]
name = "sotf_audio_decoder_test"
path = "bin/audio_decoder_test.rs"

[[bin]]
name = "generate_audio_tests"
path = "bin/generate_audio_tests.rs"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "tracing"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
futures = "0.3"
tempfile = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

# Audio decoding/encoding
symphonia = { version = "0.5", default-features = false }
symphonia-core = "0.5"
symphonia-metadata = "0.5"
symphonia-bundle-flac = "0.5"
symphonia-bundle-mp3 = "0.5"
symphonia-codec-aac = "0.5"
symphonia-codec-pcm = "0.5"
symphonia-codec-vorbis = "0.5"
symphonia-format-riff = "0.5"
symphonia-format-ogg = "0.5"
symphonia-format-isomp4 = "0.5"
ebur128 = "0.1.10"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
signal-hook-tokio = { workspace = true }

[target.'cfg(all(any(target_os = "ios", target_os="ios_sim"), target_arch = "aarch64"))'.dependencies]
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="x86_64"))'.dependencies]
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="aarch64"))'.dependencies]
signal-hook-tokio = { workspace = true }

[dev-dependencies]
# Needed for async integration tests
tokio = { workspace = true, features = ["rt-multi-thread", "tracing"] }

