[package]
name = "sotf_audio"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "sotf_audio"
path = "src/lib.rs"

[[bin]]
name = "sotf_audio"
path = "bin/sotf_audio.rs"

[[bin]]
name = "sotf_audio_decoder_test"
path = "bin/audio_decoder_test.rs"

[[bin]]
name = "generate_audio_tests"
path = "bin/generate_audio_tests.rs"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "tracing"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
rustfft = { workspace = true }
autoeq-env = { path = "../src-env" }
autoeq-iir = { path = "../src-iir" }

# Audio decoding/encoding
symphonia = { workspace = true, default-features = false }
symphonia-core ={ workspace = true }
symphonia-metadata ={ workspace = true }
symphonia-bundle-flac ={ workspace = true }
symphonia-bundle-mp3 ={ workspace = true }
symphonia-codec-aac ={ workspace = true }
symphonia-codec-pcm ={ workspace = true }
symphonia-codec-vorbis ={ workspace = true }
symphonia-format-riff ={ workspace = true }
symphonia-format-ogg ={ workspace = true }
symphonia-format-isomp4 ={ workspace = true }
ebur128 = { workspace = true }
hound = { workspace = true }
rubato = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
signal-hook-tokio = { workspace = true }

[target.'cfg(all(any(target_os = "ios", target_os="ios_sim"), target_arch = "aarch64"))'.dependencies]
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="x86_64"))'.dependencies]
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="aarch64"))'.dependencies]
signal-hook-tokio = { workspace = true }

[dev-dependencies]
# Needed for async integration tests
tokio = { workspace = true, features = ["rt-multi-thread", "tracing"] }
rand = { workspace = true }

