[package]
name = "sotf_audio"
description = "an audio player and recorder that support audio plugins"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "sotf_audio"
path = "src/lib.rs"

[[bin]]
name = "sotf_player"
path = "bin/sotf_player.rs"

[[bin]]
name = "sotf_recorder"
path = "bin/sotf_recorder.rs"

[[bin]]
name = "generate_audio_tests"
path = "bin/generate_audio_tests.rs"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
rustfft = { workspace = true }
autoeq-env = { path = "../src-env" }
autoeq-iir = { path = "../src-iir" }

# Audio decoding/encoding
symphonia = { workspace = true, default-features = false }
symphonia-core ={ workspace = true }
symphonia-metadata ={ workspace = true }
symphonia-bundle-flac ={ workspace = true }
symphonia-bundle-mp3 ={ workspace = true }
symphonia-codec-aac ={ workspace = true }
symphonia-codec-pcm ={ workspace = true }
symphonia-codec-vorbis ={ workspace = true }
symphonia-format-riff ={ workspace = true }
symphonia-format-ogg ={ workspace = true }
symphonia-format-isomp4 ={ workspace = true }
ebur128 = { workspace = true }
hound = { workspace = true }
rubato = { workspace = true }
notify = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

