[package]
name = "autoeq"
version = "0.2.223"
edition = "2021"
authors = ["Pierre Aubert <pierre@spinorama.org>"]
license = "GPL-3.0-or-later"
description = "Automatic equalization for speakers and headphones"
repository = "https://github.com/pierreaubert/autoeq"

[dependencies]
build_html = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
ndarray = { workspace = true }
nlopt = { workspace = true }
num_cpus = { workspace = true }
metaheuristics-nature = { workspace = true }
plotly = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook-tokio = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }

# AutoEQ crates
autoeq-iir = { path = "../src-iir" }
autoeq-de = { path = "../src-de" }
autoeq-cea2034 = { path = "../src-cea2034" }
autoeq-env = { path = "../src-env" }

# Platform-specific plotly static dependencies
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
plotly_static = { version = "0.1.0", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(target_os = "windows")'.dependencies]
plotly_static = { version = "0.1.0", features = ["chromedriver"] }


# External BLAS - platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.12.1", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
blas-src = { version = "0.12.1", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[[bin]]
name = "autoeq"
path = "bin/autoeq.rs"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"

[[bin]]
name = "download"
path = "bin/download.rs"

[lib]
name = "autoeq"
path = "src/lib.rs"
