[package]
name = "autoeq"
version = "0.2.237"
edition = "2024"
authors = ["Pierre Aubert <pierre@spinorama.org>"]
license = "GPL-3.0-or-later"
description = "Automatic equalization for speakers and headphones"
repository = "https://github.com/pierreaubert/autoeq"

[dependencies]
build_html = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
ndarray = { workspace = true }
num_cpus = { workspace = true }
metaheuristics-nature = { workspace = true }
plotly = { workspace = true }
plotly_static = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }

# AutoEQ crates
autoeq-iir = { path = "../src-iir" }
autoeq-de = { path = "../src-de" }
autoeq-cea2034 = { path = "../src-cea2034" }
autoeq-env = { path = "../src-env" }

# Unix-only dependencies for CLI
[target.'cfg(not(target_os = "windows"))'.dependencies]
nlopt = { workspace = true }
signal-hook-tokio = { workspace = true }

# External BLAS - platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.12.1", features = ["accelerate"] }
accelerate-src = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
blas-src = { version = "0.12.1", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[[bin]]
name = "autoeq"
path = "bin/autoeq.rs"

[[bin]]
name = "benchmark_autoeq_speaker"
path = "bench/benchmark_autoeq_speaker.rs"

[[bin]]
name = "download"
path = "bin/download.rs"

[lib]
name = "autoeq"
path = "src/lib.rs"
