[package]
name = "autoeq"
version = "0.2.243"
description = "Automatic equalization for speakers and headphones"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
build_html = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
num_cpus = { workspace = true }
metaheuristics-nature = { workspace = true }
plotly = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }

# AutoEQ crates
autoeq-iir = { version="0.2", path = "../src-iir" }
autoeq-de = { version="0.2", path = "../src-de" }
autoeq-cea2034 = { version="0.2", path = "../src-cea2034" }
autoeq-env = { version="0.2", path = "../src-env" }

# nlopt
ndarray = { workspace = true }
blas-src = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"
# nlopt
nlopt = { workspace = true }
signal-hook-tokio = { workspace = true }
# plotly_static config
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(all(target_os = "linux", target_arch="x86_64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly_static config
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }
nlopt = { workspace = true }
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="aarch64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly_static config
plotly_static = { version = "0.1", features = ["geckodriver", "webdriver_download"] }
nlopt = { workspace = true }
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "windows", target_arch="x86_64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = "0.8.1"

[target.'cfg(all(target_os = "windows", target_arch="aarch64"))'.dependencies]
# blas folklore: intel-mkl not supported on arm :)
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly no static on windows (gecko and edge are working)
plotly_static = { version = "0.1", features = ["geckodriver"] }

[[bin]]
name = "autoeq"
path = "bin/autoeq.rs"

[[bin]]
name = "benchmark_autoeq_speaker"
path = "bin/autoeq_benchmark_speaker.rs"

[[bin]]
name = "download"
path = "bin/autoeq_download_speaker.rs"

[lib]
name = "autoeq"
path = "src/lib.rs"
