[package]
name = "autoeq-cea2034"
version = "0.2.189"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[lib]
name = "autoeq_cea2034"
path = "src/lib.rs"
