[package]
name = "autoeq-cea2034"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[lib]
name = "autoeq_cea2034"
path = "src/lib.rs"
