[package]
name = "autoeq-de"
version = "0.2.48"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
# Core numerical computing
ndarray = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }
autoeq-testfunctions = { version="0.2", path = "../src-testfunctions" }
autoeq-env = { version="0.2", path = "../src-env" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(target_os = "macos")'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"
nlopt = { workspace = true }
signal-hook-tokio = { workspace = true }
# plotly_static config
plotly = { version = "0.13", features = ["static_export_default"] }
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(target_os = "linux")'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly_static config
plotly = { version = "0.13", features = ["static_export_default"] }
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }
nlopt = { workspace = true }
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "windows", target_arch="x86_64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = "0.8.1"
# plotly no static on windows
plotly = { version = "0.13" }

[target.'cfg(all(target_os = "windows", target_arch="aarch64"))'.dependencies]
# blas folklore: intel-mkl not supported on arm :)
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly no static on windows
plotly = { version = "0.13" }

[[bin]]
name = "plot_autoeq_de"
path = "bin/plot_autoeq_de.rs"

[[bin]]
name = "benchmark_convergence"
path = "bench/benchmark_convergence.rs"

[[bin]]
name = "run_autoeq_de"
path = "bin/run_autoeq_de.rs"

[lib]
name = "autoeq_de"
path = "src/mod.rs"
