[package]
name = "sotf_hal"
version = "0.2.0"
edition = "2021"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
license = "GPL 3.0"
description = "Simplified Core Audio HAL driver with bidirectional audio buffers"

[lib]
name = "sotf_hal"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "test_loopback"
path = "bin/test_loopback.rs"

[dependencies]
# Core Audio integration (required)
coreaudio-sys = "0.2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
libc = "0.2"

# Lock-free ring buffer (required)
rb = "0.4"

# Logging and error handling (required)
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# audio
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.0"
