[package]
name = "autoeq-iir"
version = "0.2.23"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
base64 = "0.22"
byteorder = "1.5"

[lib]
name = "autoeq_iir"
path = "src/mod.rs"
