[package]
name = "autoeq-iir"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }

[lib]
name = "autoeq_iir"
path = "src/mod.rs"

