[package]
name = "sotf"
version = "0.4.44"
description = "Sound of the future will improve and customize the sound of your speakers or your headsets"
authors = ["pierre@spinorama.org"]
edition = "2024"

[lib]
name = "sotf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
cpal = { workspace=true }
csv = { workspace=true }
ndarray = { workspace=true }
nlopt = { workspace=true }
plotly = { workspace=true }
tokio = { workspace=true }
reqwest = { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
urlencoding = { workspace=true }

# autoeq
sotf_backend = { path = "../src-ui-backend" }
autoeq = { path = "../src-autoeq" }

# tauri
tauri = { workspace=true , features = [] }
tauri-plugin-dialog = { workspace=true }
tauri-plugin-fs = "2"

[build-dependencies]
tauri-build = { version="2.5", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
# BLAS: Use Accelerate framework on macOS
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
# BLAS: Use OpenBLAS on Linux
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
# BLAS: Use Intel MKL on Windows x86_64 (dynamic, LP64, parallel with Intel OpenMP)
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = { version = "0.8.1", features = ["mkl-dynamic-lp64-iomp"] }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
# BLAS: Intel MKL not supported on ARM, use OpenBLAS
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
