[package]
name = "autoeq-testfunctions"
version = "0.2.34"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
clap = { workspace = true, features = ["derive"] }
autoeq-env = { version = "0.2.2", path = "../src-env"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
plotly = { version = "0.13", features = ["static_export_default"] }
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(target_os = "linux")'.dependencies]
plotly = { version = "0.13", features = ["static_export_default"] }
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(target_os = "windows")'.dependencies]
plotly = { version = "0.13" }

[lib]
name = "autoeq_testfunctions"
path = "src/lib.rs"

[[bin]]
name = "plot_functions"
path = "bin/plot_functions.rs"
