[package]
name = "autoeq-testfunctions"
version = "0.2.35"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
clap = { workspace = true, features = ["derive"] }
autoeq-env = { version = "0.2.2", path = "../src-env"}
serde = { workspace = true}
serde_json = { workspace = true}
regex = { workspace = true}
plotly = { workspace = true}

[target.'cfg(target_arch="x86_64")'.dependencies]
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(all(target_os="macos", target_arch="aarch64"))'.dependencies]
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

[target.'cfg(all(not(target_os="macos"), target_arch="aarch64"))'.dependencies]
plotly_static = { version = "0.1", features = ["geckodriver", "webdriver_download"] }

[lib]
name = "autoeq_testfunctions"
path = "src/lib.rs"

[[bin]]
name = "plot_functions"
path = "bin/plot_functions.rs"
