[package]
name = "autoeq-testfunctions"
version = "0.2.37"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
clap = { workspace = true, features = ["derive"] }
autoeq-env = { version = "0.2.2", path = "../src-env"}
serde = { workspace = true}
serde_json = { workspace = true}
regex = { workspace = true}
plotly = { workspace = true}
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"], optional = true }

[features]
default = []
plotly_static = ["dep:plotly_static"]

[lib]
name = "autoeq_testfunctions"
path = "src/lib.rs"

[[bin]]
name = "plot_functions"
path = "bin/plot_functions.rs"
