[package]
name = "sotf_backend"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "sotf_backend"
path = "src/lib.rs"

[[bin]]
name = "sotf_audio_test"
path = "bin/audio_test.rs"

[dependencies]
autoeq = { workspace = true }
ndarray = { workspace = true }
nlopt = { workspace = true }
plotly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# BLAS: Use Accelerate framework on macOS
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"
# plotly_static config
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="x86_64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly_static config
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch="aarch64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly_static config
plotly_static = { version = "0.1", features = ["geckodriver", "webdriver_download"] }
signal-hook-tokio = { workspace = true }

[target.'cfg(all(target_os = "windows", target_arch="x86_64"))'.dependencies]
# blas folklore
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = "0.8.1"
# plotly no static on windows (gecko and edge are working)
plotly_static = { version = "0.1", features = ["chromedriver"] }

[target.'cfg(all(target_os = "windows", target_arch="aarch64"))'.dependencies]
# blas folklore: intel-mkl not supported on arm :)
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# plotly no static on windows (gecko and edge are working)
plotly_static = { version = "0.1", features = ["geckodriver"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
