[package]
name = "autoeq-ui-tauri"
version = "0.3.33"
description = "AutoEQ: optimise your speaker or your headset"
authors = ["pierre@spinorama.org"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoeq_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
autoeq = { path = "../../src-autoeq" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ndarray = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
blas-src = { workspace = true }
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"


